@@ -321,8 +321,6 @@ parse_cli(MatchTree *matchtree, EixRc &eixrc, VarDbPkg &varpkg_db, PortageSettin
 						Keywords::RED_DOUBLE_LICENSE, red);
 					eixrc.getRedundantFlags("REDUNDANT_IF_DOUBLE_CFLAGS",
 						Keywords::RED_DOUBLE_CFLAGS, red);
-					eixrc.getRedundantFlags("REDUNDANT_IF_MINUSASTERISK",
-						Keywords::RED_MINUSASTERISK, red);
 					eixrc.getRedundantFlags("REDUNDANT_IF_IN_KEYWORDS",
 						Keywords::RED_IN_KEYWORDS, red);
 					eixrc.getRedundantFlags("REDUNDANT_IF_IN_MASK",
