@@ -156,8 +156,7 @@ DefineSet keywords \
 	REDUNDANT_IF_WEAKER \
 	REDUNDANT_IF_STRANGE \
 	REDUNDANT_IF_NO_CHANGE \
-	REDUNDANT_IF_DOUBLE_LINE \
-	REDUNDANT_IF_MINUSASTERISK
+	REDUNDANT_IF_DOUBLE_LINE
 DefineSet mask \
 	REDUNDANT_IF_MASK_NO_CHANGE \
 	REDUNDANT_IF_DOUBLE_MASKED
