@@ -157,7 +157,6 @@ class PortageSettings : public std::map<std::string,std::string> {
 		{ return &m_package_sets; }
 	public:
 		bool m_recurse_sets;
-		bool m_obsolete_minusasterisk;
 		std::string m_eprefix;
 		std::string m_eprefixconf;
 		std::string m_eprefixprofile;
